--- a/ch05/styles/main.css
+++ b/ch05/styles/main.css
@@ -1,4 +1,95 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    background-color: var(--secondary-color);
+}
+
+
+
 body {
+
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
+    width: 90%;
+    margin: 0 auto;
+    border: double 8px var(--primary-color);
+    background-color: var(--tertiary-color);
+}
+
+footer {
+    border-top: 4px solid var(--primary-color);
+
+    & p{
+        font-size: 90%;
+        font-weight: bold;
+        text-align: center;
+        margin: 5px;
+
+    }
+}
+
+main {
+    padding: 20px;
+}
+
+h1 {
+    margin: 10px 0;
+    padding: 5px;
+    color: var(--primary-color);
+    font-size: 150%;
+    
+}
+
+h2{
+    margin: 5px 0;
+    padding: 5px;
+    font-size: 125%;
+}
+
+h3{
+    margin: 5px 0;
+    padding: 5px;
+    font-size: 115%;
+}
+
+p {
+    margin: 5px 0;
+    padding: 5px;
+}
+
+blockquote {
+    margin: 5px 10px;
+    padding: 5px;
+    
+}
+
+ul {
+    margin: 5px 0;
+    padding: 5px;
+}
+
+li {
+    margin: 3px 0;
+    padding: 1px;
+}
+
+cite {
+    font-style: normal;
+    color: var(--primary-color);
+    font-weight: bold;
+}
+
+img{
+    float: left;
+    margin: 5px 10px;
+    padding: 5px;
+}
+
+:root {
+    --primary-color: rebeccapurple;
+    --secondary-color: aliceblue;
+    --tertiary-color: white;
 }
