--- a/ch06a/styles/main.css
+++ b/ch06a/styles/main.css
@@ -56,10 +56,13 @@ header {
 /* the styles for the main element */
 main {
 	clear: left;
+	display : flex;
 }
 
 /* the styles for the section */
 section {
+	order : 2;
+	flex-basis: 80%;
 	& h1 {
 		color: var(--primary-color);
 	}
@@ -69,11 +72,18 @@ section {
 article {
 	& img {
 		border: 1px solid var(--dark);
+		max-width: 100%;
+		height: auto;
+		float : left;
+		margin :1em;
+		
 	}
 }
 
 /* the styles for the aside */
 aside {
+	order :1;
+	flex-basis: 20%;
 	& h2 {
 		color: var(--primary-color);
 	}
