--- a/ch06b/styles/main.css
+++ b/ch06b/styles/main.css
@@ -19,6 +19,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     width: 80%;
+	max-width: 800px;
     margin: auto;
     border: 3px solid var(--primary-color);
 }
@@ -60,6 +61,7 @@ header {
 /* the styles for the main element */
 main {
 	clear: left;
+	display : flex;
 }
 
 /* the styles for the section */
@@ -88,7 +90,7 @@ article {
 	margin-bottom: .5em;
 	& img {
 		float: right;
-		margin: .25em 0 1em 1em;
+		margin: .25em 0 3em 1em;
 		border: 1px solid var(--dark);
 		width: min(100%, 225px);
 	}
@@ -96,6 +98,7 @@ article {
 
 /* the styles for the aside */
 aside {
+	flex-basis: 35%;
 	& h2 {
 		color: var(--primary-color);
 	}
@@ -113,3 +116,4 @@ footer {
 		padding-bottom: 0; 
 	}
 }
+
