--- a/ch07b/styles/main.css
+++ b/ch07b/styles/main.css
@@ -111,3 +111,88 @@ footer {
 		padding-bottom: 0; 
 	}
 }
+
+.navbar {
+
+	background-color: var(--primary-color);
+
+	& a {
+
+		display: block;
+		margin : 0 1px 2px;
+		padding: 1em;
+		text-decoration: none;
+		color: white;
+
+	}
+
+	
+		
+		
+
+	& ul {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
+
+}
+.menu {
+	display: flex;
+	flex-wrap: wrap;
+	
+	& li {
+		flex-basis: 20%;
+		text-align: center;
+	}
+
+}
+
+.menu li:has(.submenu) {
+	position: relative;
+	& small {
+		margin-left: 0.5em;
+	}
+	&:first-child a {
+		margin-left: 0;
+	}
+
+	&:last-child a {
+		margin-right: 0;
+	}
+
+	& .submenu > li a {
+		margin: 0 2px 2px;
+	}
+	& .submenu {
+		
+		display: none;
+		position: absolute;
+		top: 100%;
+		left: 0;
+		right : 0;
+		background-color: var(--primary-color);
+		
+
+		
+		
+		color: white;
+	}
+
+	&:hover > .submenu {
+		display: block;
+	}
+}
+
+a.current {
+	color: var(--accent-color);
+	font-weight: bold;
+}
+
+a.current:hover {
+	font-style: normal;
+}
+ 
+.menu li .submenu li {
+	text-align: initial;
+}
