--- a/ch08a/styles/main.css
+++ b/ch08a/styles/main.css
@@ -44,6 +44,7 @@ header {
 		padding-bottom: 0;
 	}
 	& h3 {
+		display: none;
 		font-size: 130%;
 		font-style: italic;
 	}
@@ -56,14 +57,14 @@ header {
 
 /* the styles for the main element */
 main {
+	flex-direction: column;
 	clear: left;
 	display: flex;
 }
 
 /* the styles for the section */
 section {
-	order: 2;
-	flex-basis: 75%;
+	
 	& h1 {
 		color: var(--primary-color);
 		margin: 0;
@@ -82,8 +83,7 @@ article {
 
 /* the styles for the aside */
 aside {
-	order: 1;
-	flex-basis: 25%;
+	
 	& h2 {
 		color: var(--primary-color);
 	}
@@ -127,4 +127,38 @@ nav {
 	& a.current:hover { 
 		font-style: normal; /* override default hover effect */
 	}
+}
+
+
+@media (min-width: 768px) {
+
+	section {
+		order: 2;
+		flex-basis: 75%;
+	}
+
+	aside {
+		order: 1;
+		flex-basis: 25%;
+	}
+
+	main {
+		flex-direction: row;
+	}
+
+
+
+
+}
+
+@media (min-width: 500px) {
+
+	header {
+
+		& h3 {
+			display : block;
+		}
+	}
+
+
 }
