--- a/ch13/styles/main.css
+++ b/ch13/styles/main.css
@@ -72,12 +72,14 @@ section {
 
 /* the styles for the article */
 article {
-	& img {
+	& img, video{
 		float: left;
 		margin: .25em 1em 1em 0;
 		border: 1px solid var(--dark);
 		width: min(100%, 480px);
 	}
+
+	
 }
 
 /* the styles for the aside */
