--- a/ch14/styles/main.css
+++ b/ch14/styles/main.css
@@ -16,6 +16,16 @@
 
 /* the default styles for the elements */
 body {
+	display: grid;
+	grid-template-rows: auto auto auto;
+	grid-template-columns: 1fr;
+	grid-template-areas:
+		"header"
+		"main"
+		"footer";
+	line-height: 1.5;
+	background-color: var(--light);
+	color: var(--dark);
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     width: 80%;
@@ -105,4 +115,14 @@ footer {
 		color: white;
 		padding-bottom: 0; 
 	}
+}
+
+main {
+	display: grid;
+	grid-template-areas:
+		"aside section aside";
+	grid-template-columns: 1fr 3fr 1fr;
+	grid-template-rows: auto auto auto;
+	grid-gap: 1em;
+	padding: 1em;
 }
